--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@behaver/astraeus.js",
+  "name": "@behaver/astraeus",
   "version": "1.0.0",
   "description": "AstraeusJS is biulded for astronomical calculation.",
   "main": "index.js",
@@ -8,7 +8,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha test"
+    "test": "./node_modules/.bin/mocha --require @babel/register test/*.js"
   },
   "repository": {
     "type": "git",
@@ -27,7 +27,14 @@
     "src"
   ],
   "devDependencies": {
+    "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/register": "^7.12.1",
+    "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0",
     "chai": "^4.2.0",
-    "mocha": "^6.1.4"
-  }
+    "mocha": "^6.2.3"
+  },
+  "dependencies": {}
 }
